# AnglerVersion4

./: .gitignore  Dockerfile  README.md  docker-compose.yml  envionment.yml  requirements.txt  run-angler.sh
app/: pyproject.toml
app/angler/: BLAST_probes.py  angler.py  target_kmers.py  util.py
app/log/: align_log.txt
app/probes/: BLAST_probes.csv  non_overlap_probes.csv
app/src/: BLAST_probes.py  target_kmers.py
app/static/: README.md  non_overlap_probes.csv
app/tests/: test_sanity.py
blast/query/: blast_query.fasta
docs/mrna_fasta/: Pcdha7_NM_009957.2.fasta  Pcdha8_NM_201243.1.fasta
docs/multi_align/: multi_align.fasta
docs/multi_fasta/: multi_fasta.fasta
env/: anglerfish.yml
log/: align_log.txt  params.txt
probes/: BLAST_probes.csv  non_overlap_probes.csv  non_overlap_probes_original.csv
src/: 01_target_kmers.py  02_BLAST_probes.py
