[tool.poetry]
name = "angler4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "angler"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
attrs = "^23.1.0"
biopython = "^1.81"
exceptiongroup = "^1.1.1"
iniconfig = "^2.0.0"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.2"
numpy = "^1.24.2"
packaging = "^23.1"
pandas = "^2.0.0"
pluggy = "^1.0.0"
pytest = "^7.3.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
six = "^1.16.0"
tomli = "^2.0.1"
tqdm = "^4.65.0"
scipy = "^1.10.1"
python-Levenshtein = "^0.20.9"
nupack = {path = "NUPACK/src/package/nupack-4.0.0.23-cp39-cp39-manylinux2014_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
